# kirkaio

./: .gitignore  CHANGELOG.md  EXAMPLES.md  LICENSE  README.md  docs.md  pyproject.toml  test_live.py
.github/workflows/: publish.yml  tests.yml
kirkaio/: __init__.py  chatbot.py  cli.py  client.py  exceptions.py  models.py
kirkapy/: __init__.py  cache.py  cli.py  exceptions.py  models.py
tests/: test_cache.py  test_chatbot.py  test_cli.py  test_client.py  test_endpoints.py  test_models.py
tmp/: test_meowers.py
