[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kirkaio"
version = "1.1.1"
description = "Async Python client for the Kirka Public API"
readme = "README.md"
authors = [
    { name = "Energyboy :3", email = "energy@gayboi.club" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["kirka", "gaming", "api", "async"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
]
urls = { Repository = "https://github.com/gayboi-club/kirkaio" }
dependencies = [
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "aioresponses>=0.7",
]

[project.scripts]
kirkaio = "kirkaio.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kirkaio*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"